lets goo, feliz navidad

--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
         <link href="https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="./images/icon.png">       
+        <link rel="icon" href="./images/UN10.jpg">       
         <link rel="stylesheet" href="./css/style.css">
         <title>Jairo</title>
     </head>
     <body>
         <nav class="topnav" id="myTopnav">
             <a href="#portada" class="logo">
-                <img src="./images/icon.png">
+                <img src="./images/UN10.jpg">
             </a>
-            <a href="#texturas"><p>Texturas</p></a>
-            <a href="#merchandising"><p>Merchandising</p></a>
-            <a href="#geometria"><p>Geometría</p></a>
-            <a href="#colores"><p>Colores</p></a>
+            <a href="#hola"><p>Hola</p></a>
             <a href="javascript:void(0);" class="icon" onclick="menuResponsive()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -31,23 +28,19 @@
         <div class="main">
             <section class="jairo">
                 <div class="temp-text">
-                    <h1>MI UNIVERSO ES VISUAL Y ARQUITECTONICO</h1>
+                    <h1>JODER MAN</h1>
                     <p>
-                    Como casi todos los medios de expresión, el fenómeno de la ilustración y el diseño vive cambios constantes.
+                    ¡¡¡Feliz navidad!!!
                     <br>
-                    Sin embargo, se mantiente intacto el sentido de la ropa y los elementos decorativos.
-                    <br>
-                    La ilustración habla, vive y crece.
-                    <br>
-                    Mi objetivo es colaborar a formar profesionales.
+                    (Man reconocelo esto es un 10)
                     </p>
                 </div>
                 <div class="temp-image">
-                    <img src="./images/foto.jpeg"  alt="">
+                    <img src="./images/feliz_navidad.jpg"  alt="">
                 </div>
             </section>
         </div>
-        <div class="main">
+        <!--<div class="main">
             <section class="seccion" id="colores">
                 <div class="text">
                     <h1>COLORES</h1>
@@ -89,153 +82,8 @@
                 </div>
                 </div>
             </section>
-            <section class="seccion" id="geometria">
-                <div class="text">
-                    <h1>GEOMETRIA</h1>
-                    <p>
-                        Formas básicas geométricas se activan
-                        <br>
-                        se moldean en la ilustración
-                        <br>
-                        creando luces y sombras.
-                    </p>
-                    <br>
-                    <br>
-                </div>
-                <div class="gallery" id="gallery-geometria">
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/geometria/g1.jpeg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/geometria/geometria1.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/geometria/geometria2.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/geometria/geometria3.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/geometria/geometria7.jpg" alt=""></div>
-                    </div>
-                    <!--<div class="gallery-item">
-                            <div class="content"><img  src="./images/geometria/g8.jpg" alt=""></div>
-                    </div>-->
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/geometria/geometria4.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/geometria/geometria5.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/geometria/geometria6.jpg" alt=""></div>
-                    </div>
-                </div>
-            </section>
-            <section class="seccion" id="merchandising">
-                <div class="text">
-                    <h1>MERCHANDISING</h1>
-                    <p>
-                        Comunicar, vender y seducir
-                        <br>
-                        a través de un cristal.
-                        <br>
-                        Una buena idea permite gestionar
-                        <br>
-                        de froma satisfactoria, cualquier
-                        <br>
-                        establecimiento comercial.
-                    </p>
-                    <br>
-                    <br>
-                </div>
-                <div class="gallery" id="gallery-merchandising">
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m1.JPG" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m10.JPG" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m11.JPG" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m12.JPG" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m7.JPG" alt=""></div>
-                    </div>
-                   <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m8.JPG" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m2.JPG" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m3.JPG" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m4.JPG" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/merchandising/m5.JPG" alt=""></div>
-                    </div>
-                </div>
-            </section>
-            <section class="seccion" id="texturas">
-                <div class="text">
-                    <h1>TEXTURAS</h1>
-                    <p>
-                        Fuente de inspiración
-                        <br>
-                        La textura es para el ilustrador lo que la
-                        <br>
-                        pintura es para el Artista
-                    </p>
-                    <br>
-                    <br>
-                </div>
-                <div class="gallery" id="gallery-texturas">
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/textil/t2.jpeg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/textil/t3.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/textil/t4.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/textil/t6.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                        <div class="content"><img  src="./images/textil/t8.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/textil/t11.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/colores/color4.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/colores/color2.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/colores/color3.jpg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/textil/t23.jpeg" alt=""></div>
-                    </div>
-                    <div class="gallery-item">
-                            <div class="content"><img  src="./images/textil/t24.jpeg" alt=""></div>
-                    </div>
-                    <!--<div class="gallery-item">
-                        <div class="content"><img  src="./images/textil/g21.jpg" alt=""></div>
-                    </div>-->
-                </div>
-            </section>
-        </div>
-        <div class="main">
+        </div>-->
+        <!--<div class="main">
             <section class="colaboraciones">
                 <div class="social-footer-icons">
                     <ul class="social">
@@ -244,7 +92,7 @@
                         <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
-                <h1>TRABAJOS Y COLABORACIONES</h1>
+                <h1>PIM PAM</h1>
                 <div class="logotipos">
                     <div>
                         <img src="./images/colaboraciones/aguayo.png"/>
@@ -252,45 +100,10 @@
                     <div>
                         <img src="./images/colaboraciones/ananda.jpg"/>
                     </div>
-                    <div>
-                        <img src="./images/colaboraciones/colon.svg"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/david-delfin.svg"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/dcarlo-terraza-amanda.png"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/IDEM.png"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/ied.png"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/joyas-laya.jpg"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/musgo.jpg"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/natura.svg"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/ohqueluna.png"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/prime-video.png"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/swichdt.png"/>
-                    </div>
-                    <div>
-                        <img src="./images/colaboraciones/VOGUE_LOGO.svg"/>
-                    </div>
                 </div>
             </section>
-        </div>         
+        </div>
+    -->
         <script src="./js/main.js"></script>
     </body>
 </html>
