--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="./images/UN10.jpg">       
         <link rel="stylesheet" href="./css/style.css">
-        <title>Jairo</title>
+        <title>The mans</title>
     </head>
     <body>
         <nav class="topnav" id="myTopnav">
