Prueba juego, limpiar htmls

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
         <link href="https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="./images/UN10.jpg">       
+        <link rel="icon" href="./images/favicon.png">       
         <link rel="stylesheet" href="./css/style.css">
-        <title>The mans</title>
+        <title>Cuéntame Man</title>
     </head>
     <body>
         <nav class="topnav" id="myTopnav">
             <a href="#portada" class="logo">
-                <img src="./images/UN10.jpg">
+                <img src="./images/favicon.png">
             </a>
             <a href="#hola"><p>Hola</p></a>
             <a href="javascript:void(0);" class="icon" onclick="menuResponsive()">
                 <i class="fa fa-bars"></i>
             </a>
+            <a href="./pages/pulsame/"><p>Juegos</p></a>
         </nav>
         <section id="portada">
             <div></div>
@@ -34,9 +35,6 @@
                     <br>
                     (Man reconocelo esto es un 10)
                     </p>
-                </div>
-                <div class="temp-image">
-                    <img src="./images/feliz_navidad.jpg"  alt="">
                 </div>
             </section>
         </div>
