Arreglo y libreria de guardado

--- a/pages/pulsame/index.html
+++ b/pages/pulsame/index.html
@@ -5,6 +5,7 @@
   <title>Pulsame</title> 
   <link href="style.css" rel="stylesheet" type="text/css">
   <script src="funciones.js"></script>
+  <script src="../../js/FileSaver.js"></script>
 </head>
 <body>
 <script language="javascript"> 
